--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
 </head>
 
 <body>
+
+    <div class="our-way">
+        <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="1900px" height="4200px">
+            <g fill="#e87" >
+                <circle id="first" cx="100" cy="50" r="30" ></circle>
+                <circle id="second" cx="250" cy="650" r="30" ></circle>
+                <circle id="third" cx="900" cy="950" r="30" ></circle>
+            </g>
+
+            <path style="stroke-dasharray:10000;stroke-dashoffset:0"
+                  d="M 100 50 q 1500 600 150 600 q 150 750 900 950"
+                  stroke="#e87"
+                  stroke-width="5"
+                  fill="none"
+                  data-0="stroke-dashoffset:10000;"
+                  data-end="stroke-dashoffset:0;">
+            </path>
+        </svg>
+    </div>
+
     <section class="header-section">
         <h1 class="niconne-font">Privetik</h1>
     </section>
