--- a/index.html
+++ b/index.html
@@ -19,17 +19,16 @@
     <div class="our-way">
         <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="1900px" height="4200px">
             <g fill="#e87" >
-                <circle id="first" cx="100" cy="50" r="30" ></circle>
-                <circle id="second" cx="250" cy="650" r="30" ></circle>
-                <circle id="third" cx="900" cy="950" r="30" ></circle>
+                <circle id="first" cx="100" cy="250" r="30" ></circle>
             </g>
 
-            <path style="stroke-dasharray:10000;stroke-dashoffset:0"
-                  d="M 100 50 q 1500 600 150 600 q 150 750 900 950"
+            <!--stroke-dasharray: 5000;-->
+            <path style="stroke-dasharray: 5000; stroke-dashoffset:0"
+                  d="M 100 250 q 500 600 150 600 q -350 30 250 300 q 50 30 -100 50 q -200 50 100 500 q 300 500 -200 500 q -300 10 400 400"
                   stroke="#e87"
                   stroke-width="5"
                   fill="none"
-                  data-0="stroke-dashoffset:10000;"
+                  data-0="stroke-dashoffset:5000;"
                   data-end="stroke-dashoffset:0;">
             </path>
         </svg>
