new photo were added

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
     <div class="our-way">
         <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="1900px" height="6200px">
+            <!--stroke-dasharray: 7000;-->
             <path style="stroke-dasharray: 7000;stroke-dashoffset:0"
-                  d="M 100 250 q 500 600 150 600 q -350 30 250 300 q 50 30 -100 50 q -200 50 100 500 q 300 500 -200 500 q -300 10 400 400 q 300 160 -200 1000 q -300 700 200 800 q 150 50 -200 700 q -300 500 -100 500"
+                  d="M 100 250 q 300 600 50 600 q -350 30 100 300 q 50 30 -100 50 q -250 30 50 400 q 350 500 -40 700 q -250 150 100 500 q 50 70 -100 100 q -250 70 200 400 q 500 500 -250 800 q -150 60 50 600 q 140 500 -70 800 q -50 100 70 150"
                   stroke="#e87"
                   stroke-width="5"
                   fill="none"
@@ -41,31 +42,31 @@
             <div class="photo-wrapper clearfix">
 
                 <div class="column">
-                    <div class="img-1 block-1" data-sr="enter top over 3s after 0.5s"></div>
-                    <div class="img-2 block-2" data-sr="enter right after 0.5s"></div>
-                    <div class="img-2 block-3" data-sr="enter right after 0.5s"></div>
+                    <div class="img-13 block-1" data-sr="enter top over 3s after 0.5s"></div>
+                    <div class="img-5 block-2" data-sr="enter right after 0.5s"></div>
+                    <div class="img-4 block-3" data-sr="enter right after 0.5s"></div>
                 </div>
                 <div class="column">
-                    <div class="img-2 block-3" data-sr="enter right after 0.5s"></div>
-                    <div class="img-2 block-2" data-sr="enter right after 0.5s"></div>
-                    <div class="img-1 block-1" data-sr="enter top over 3s after 0.5s"></div>
+                    <div class="img-15 block-3" data-sr="enter right after 0.5s"></div>
+                    <div class="img-6 block-2" data-sr="enter right after 0.5s"></div>
+                    <div class="img-7 block-1" data-sr="enter top over 3s after 0.5s"></div>
                 </div>
                 <div class="column">
-                    <div class="img-3 block-1" data-sr="enter bottom over 1s and move 300px after 0.3s"></div>
-                    <div class="img-2 block-3" data-sr="enter right after 0.5s"></div>
+                    <div class="img-11 block-1" data-sr="enter bottom over 1s and move 300px after 0.3s"></div>
+                    <div class="img-10 block-3" data-sr="enter right after 0.5s"></div>
                     <div class="img-3 block-2" data-sr="enter bottom over 1s and move 300px after 0.3s"></div>
                 </div>
                 <div class="column">
-                    <div class="img-4 block-2" data-sr="enter top over 0.5s and move 200px"></div>
-                    <div class="img-2 block-1" data-sr="enter right after 0.5s"></div>
-                    <div class="img-4 block-3" data-sr="enter top over 0.5s and move 200px"></div>
+                    <div class="img-12 block-2" data-sr="enter top over 0.5s and move 200px"></div>
+                    <div class="img-32 block-1" data-sr="enter right after 0.5s"></div>
+                    <div class="img-8 block-3" data-sr="enter top over 0.5s and move 200px"></div>
                 </div>
 
             </div>
         </div>
     </section>
 
-    <section class="full-screen-message-section" data-sr="enter top over 3s after 0.5s">
+    <section class="full-screen-message-section" data-sr="enter top over 2s after 0.5s">
         <div class="container">
             <div class="row">
                 I would like to remind you lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -81,31 +82,34 @@
             <div class="photo-wrapper clearfix">
 
                 <div class="column">
-                    <div class="img-1 block-1" data-sr="enter top over 3s after 0.5s"></div>
-                    <div class="img-2 block-2" data-sr="enter right after 0.5s"></div>
-                    <div class="img-2 block-3" data-sr="enter right after 0.5s"></div>
+                    <div class="img-14 block-2" data-sr="enter top over 0.5s and move 200px"></div>
+                    <div class="img-19 block-1" data-sr="enter right after 0.5s"></div>
+                    <div class="img-1 block-3" data-sr="enter top over 0.5s and move 200px"></div>
                 </div>
+
                 <div class="column">
-                    <div class="img-2 block-3" data-sr="enter right after 0.5s"></div>
-                    <div class="img-2 block-2" data-sr="enter right after 0.5s"></div>
-                    <div class="img-1 block-1" data-sr="enter top over 3s after 0.5s"></div>
+                    <div class="img-9 block-3" data-sr="enter right after 0.5s"></div>
+                    <div class="img-17 block-2" data-sr="enter right after 0.5s"></div>
+                    <div class="img-24 block-1" data-sr="enter top over 3s after 0.5s"></div>
                 </div>
+
                 <div class="column">
-                    <div class="img-3 block-1" data-sr="enter bottom over 1s and move 300px after 0.3s"></div>
-                    <div class="img-2 block-3" data-sr="enter right after 0.5s"></div>
-                    <div class="img-3 block-2" data-sr="enter bottom over 1s and move 300px after 0.3s"></div>
+                    <div class="img-16 block-1" data-sr="enter bottom over 1s and move 300px after 0.3s"></div>
+                    <div class="img-18 block-3" data-sr="enter right after 0.5s"></div>
+                    <div class="img-23 block-2" data-sr="enter bottom over 1s and move 300px after 0.3s"></div>
                 </div>
+
                 <div class="column">
-                    <div class="img-4 block-2" data-sr="enter top over 0.5s and move 200px"></div>
-                    <div class="img-2 block-1" data-sr="enter right after 0.5s"></div>
-                    <div class="img-4 block-3" data-sr="enter top over 0.5s and move 200px"></div>
+                    <div class="img-21 block-1" data-sr="enter top over 3s after 0.5s"></div>
+                    <div class="img-20 block-2" data-sr="enter right after 0.5s"></div>
+                    <div class="img-35 block-3" data-sr="enter right after 0.5s"></div>
                 </div>
 
             </div>
         </div>
     </section>
 
-    <section class="full-screen-message-section" data-sr="enter top over 3s after 0.5s">
+    <section class="full-screen-message-section" data-sr="enter top over 2s after 0.5s">
         <div class="container">
             <div class="row">
                 I would like to remind you lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -121,31 +125,31 @@
             <div class="photo-wrapper clearfix">
 
                 <div class="column">
-                    <div class="img-1 block-1" data-sr="enter top over 3s after 0.5s"></div>
-                    <div class="img-2 block-2" data-sr="enter right after 0.5s"></div>
-                    <div class="img-2 block-3" data-sr="enter right after 0.5s"></div>
+                    <div class="img-25 block-1" data-sr="enter top over 3s after 0.5s"></div>
+                    <div class="img-30 block-2" data-sr="enter right after 0.5s"></div>
+                    <div class="img-22 block-3" data-sr="enter right after 0.5s"></div>
                 </div>
                 <div class="column">
-                    <div class="img-2 block-3" data-sr="enter right after 0.5s"></div>
-                    <div class="img-2 block-2" data-sr="enter right after 0.5s"></div>
-                    <div class="img-1 block-1" data-sr="enter top over 3s after 0.5s"></div>
+                    <div class="img-26 block-3" data-sr="enter right after 0.5s"></div>
+                    <div class="img-31 block-2" data-sr="enter right after 0.5s"></div>
+                    <div class="img-27 block-1" data-sr="enter top over 3s after 0.5s"></div>
                 </div>
                 <div class="column">
-                    <div class="img-3 block-1" data-sr="enter bottom over 1s and move 300px after 0.3s"></div>
+                    <div class="img-29 block-1" data-sr="enter bottom over 1s and move 300px after 0.3s"></div>
                     <div class="img-2 block-3" data-sr="enter right after 0.5s"></div>
-                    <div class="img-3 block-2" data-sr="enter bottom over 1s and move 300px after 0.3s"></div>
+                    <div class="img-36 block-2" data-sr="enter bottom over 1s and move 300px after 0.3s"></div>
                 </div>
                 <div class="column">
-                    <div class="img-4 block-2" data-sr="enter top over 0.5s and move 200px"></div>
-                    <div class="img-2 block-1" data-sr="enter right after 0.5s"></div>
-                    <div class="img-4 block-3" data-sr="enter top over 0.5s and move 200px"></div>
+                    <div class="img-34 block-2" data-sr="enter top over 0.5s and move 200px"></div>
+                    <div class="img-33 block-1" data-sr="enter right after 0.5s"></div>
+                    <div class="img-28 block-3" data-sr="enter top over 0.5s and move 200px"></div>
                 </div>
 
             </div>
         </div>
     </section>
 
-    <section class="main-question-section">
+    <section class="main-question-section" data-sr="enter top over 3s after 0.5s">
             <p class="do-you-married-me-message">
                 <span>Ты выйдешь за меня?</span>
                 <span class="heartbeat"></span>
