--- a/index.html
+++ b/index.html
@@ -14,30 +14,29 @@
     <link rel="stylesheet/less" type="text/css" href="static/less/index.less">
 </head>
 
-<body>
+<body class="">
 
     <div class="our-way">
         <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="1900px" height="6200px">
             <!--stroke-dasharray: 7000;-->
             <path style="stroke-dasharray: 7000;stroke-dashoffset:0"
                   d="M 100 250 q 300 600 50 600 q -350 30 100 300 q 50 30 -100 50 q -250 30 50 400 q 350 500 -40 700 q -250 150 100 500 q 50 70 -100 100 q -250 70 200 400 q 500 500 -250 800 q -150 60 50 600 q 140 500 -70 800 q -50 100 70 150"
-                  stroke="#e87"
-                  stroke-width="5"
+                  stroke="#AF5265"
+                  stroke-width="10"
                   fill="none"
                   data-0="stroke-dashoffset:7000;"
                   data-end="stroke-dashoffset:0;">
             </path>
 
-            <circle id="first" cx="100" cy="250" r="30" fill="#e87"></circle>
-            <text class="niconne-font" x="50" y="255"  stroke="orangered" stroke-opacity=".5" style="font-size: 2em">18.03.2007</text>
+            <circle id="first" cx="100" cy="250" r="30" fill="#AF5265"></circle>
+            <text class="niconne-font" x="50" y="255"  stroke="orangered" stroke-opacity=".5" style="font-size: 2em">18.03.2006</text>
         </svg>
     </div>
 
-    <section class="header-section">
-        <h1 class="niconne-font">Privetik</h1>
-    </section>
+    <section id="first-section" class="photos-section">
 
-    <section class="photos-section">
+        <h1 class="niconne-font">Privetik</h1>
+
         <div class="container">
             <div class="photo-wrapper clearfix">
 
@@ -66,9 +65,9 @@
         </div>
     </section>
 
-    <section class="full-screen-message-section" data-sr="enter top over 2s after 0.5s">
+    <section class="full-screen-message-section">
         <div class="container">
-            <div class="row">
+            <div class="row" data-sr="enter top over 2s after 0.5s">
                 I would like to remind you lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
@@ -77,7 +76,7 @@
         </div>
     </section>
 
-    <section class="photos-section">
+    <section id="second-section" class="photos-section">
         <div class="container">
             <div class="photo-wrapper clearfix">
 
@@ -109,9 +108,9 @@
         </div>
     </section>
 
-    <section class="full-screen-message-section" data-sr="enter top over 2s after 0.5s">
+    <section class="full-screen-message-section" >
         <div class="container">
-            <div class="row">
+            <div class="row" data-sr="enter top over 2s after 0.5s">
                 I would like to remind you lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
@@ -120,7 +119,7 @@
         </div>
     </section>
 
-    <section class="photos-section">
+    <section id="third-section" class="photos-section">
         <div class="container">
             <div class="photo-wrapper clearfix">
 
@@ -145,6 +144,17 @@
                     <div class="img-28 block-3" data-sr="enter top over 0.5s and move 200px"></div>
                 </div>
 
+            </div>
+        </div>
+    </section>
+
+    <section class="full-screen-message-section" >
+        <div class="container">
+            <div class="row" data-sr="enter top over 2s after 0.5s">
+                I would like to remind you lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </div>
         </div>
     </section>
