images loader was added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <link rel="stylesheet/less" type="text/css" href="static/less/index.less">
 </head>
 
-<body class="">
+<body id="body" class="without-scroll">
+
+    <div class="loading">
+
+    </div>
 
     <div class="our-way">
         <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="1900px" height="6200px">
