simple lazy-loading

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Lena</title>
     <!--fonts-->
     <link href="http://fonts.googleapis.com/css?family=Niconne" rel="stylesheet" type="text/css">
+
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
     <!--Bootstrap-->
     <link media="all" rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <!--custom-->
@@ -17,7 +20,7 @@
 <body id="body" class="without-scroll">
 
     <div class="loading">
-
+        <i class="fa fa-spinner fa-spin fa-3x fa-fw margin-bottom"></i>
     </div>
 
     <div class="our-way">
