--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Lena</title>
     <!--fonts-->
-    <link href="http://fonts.googleapis.com/css?family=Niconne" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
@@ -42,7 +42,7 @@
 
     <section id="first-section" class="photos-section">
 
-        <h1 class="niconne-font">Privetik</h1>
+        <h1 class="niconne-font">Приветик</h1>
 
         <div class="container">
             <div class="photo-wrapper clearfix">
@@ -167,7 +167,7 @@
     </section>
 
     <section class="main-question-section" data-sr="enter top over 3s after 0.5s">
-            <p class="do-you-married-me-message">
+            <p class="do-you-married-me-message niconne-font">
                 <span>Ты выйдешь за меня?</span>
                 <span class="heartbeat"></span>
             </p>
