--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <!--fonts-->
     <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <!--custom-->
+    <link rel="stylesheet" type="text/css" href="static/less/styles.css">
 
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <!--Bootstrap-->
     <link media="all" rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <!--custom-->
-    <link rel="stylesheet/less" type="text/css" href="static/less/index.less">
+
 </head>
 
 <body id="body" class="without-scroll">
