--- a/index.html
+++ b/index.html
@@ -6,22 +6,19 @@
     <meta name="description" content="Widding">
     <meta name="viewport" content="width=device-width">
     <title>Lena</title>
-    <!--fonts-->
+
     <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-
-    <!--custom-->
     <link rel="stylesheet" type="text/css" href="static/less/styles.css">
-
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <!--Bootstrap-->
-    <link media="all" rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link media="all" rel="stylesheet" type="text/css" href="static/vendor/bootstrap.min.css">
 
 </head>
 
-<body id="body" class="without-scroll">
+<body class="without-scroll">
 
     <div class="loading">
-        <i class="fa fa-spinner fa-spin fa-3x fa-fw margin-bottom"></i>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:0%; background-color:#DCBA44;"></div>
+        </div>
     </div>
 
     <div class="our-way">
