--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="without-scroll">
 
     <div class="loading">
-        <div class="progress">
+        <div class="progress" style="background-color: transparent; height: 1rem;">
             <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:0%; background-color:#DCBA44;"></div>
         </div>
     </div>
