errors were fixed

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section class="full-screen-message-section">
         <div class="container">
             <div class="row" data-sr="enter top over 2s after 0.5s">
-                Приветик, помню как мы впервые увидились, 1го сентября какого-то года, тогда мы пошли в 5ый класс... Конечно, в то время и я думать не думал о девушках и т.д., но уже тогда нутром чуял ... что-то в тебе есть.
+                Приветик, помню как мы впервые увидились, 1го сентября какого-то года, тогда мы пошли в 5ый класс... Конечно, в то время я и думать не думал о девушках и т.д., но уже тогда нутром чуял ... что-то в тебе есть.
                 Проходили дни, месяцы, годы... Я все чаще стал присматриваться к девушкам... к тебе...Пытался как-то неуклюжа ухаживать, создавать внимание тебе. Конечно, ты же девущка... и не знала чего хочешь=) Поэтому 2 года мне отказывала во внимании...
                 Но я то знал, что именно ты моя, поэтому не прекращал свои попытки к захвату твоего сердца. Прошло некоторое время и мы начали общаться часами, ночами... бывало по 4-5 часов болтали о чем-то.. да не важно о чем, лишь бы слышать голос твой.
                 Слово за слово и настал тот момент, которого я долго ждал - ты сказала, что можно попробовать встречаться...
@@ -101,7 +101,7 @@
             <div class="row" data-sr="enter top over 2s after 0.5s">
                 Вот мы уже становимся взрослыми, по-крайней мере, мы так думали. Стали гулять, искать общие интересы и нашли ведь=) И я всё больше и чаще понимал, что ты именно та девушка, которая подходит мне. Ни по росту, ни по каким-то физическим
                 характеристикам... по-душе. В душе ты понимаешь меня лучше кого либо. Понимаешь меня с полуслова, а бывает и без слов. Годы шли , наши отношения наконец переростали в настоящую любовь, а не десткую увлеченность. Вот мы уже первокурсники.
-                Счастоливые, что вместе. И ведь ни дня я не мог не думать о тебе... кроме тех, что был не в сознании =) И даже в такие дни я тебя любил... и ты меня ... уж это я понимал сразу, как приходил в сознание. Ты всегда меня поддерживала, была
+                Счастливые, что вместе. И ведь ни дня я не мог не думать о тебе... кроме тех, что был не в сознании =) И даже в такие дни я тебя любил... и ты меня ... уж это я понимал сразу, как приходил в сознание. Ты всегда меня поддерживала, была
                 опорой и временами критиковала... Но мы были вместе и счастливы...
             </div>
         </div>
@@ -139,7 +139,7 @@
     <section class="full-screen-message-section" >
         <div class="container">
             <div class="row" data-sr="enter top over 2s after 0.5s">
-                <h2>И вот сейчас я.. уже дядка с бородой смотрю на тебя каждое утро.. и думаю..."Блин, а ведь мы счастливы". А что еще для счастья надо? Я думаю ты догадалась...
+                <h2>И вот сейчас я.. уже дядька с бородой смотрю на тебя каждое утро.. и думаю..."Блин, а ведь мы счастливы". А что еще для счастья надо? Я думаю ты догадалась...
                 Итак... главный вопрос...</h2>
             </div>
         </div>
