--- a/test.html
+++ b/test.html
@@ -2,8 +2,8 @@
 <head>
     <meta http-equiv="Content-Language">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="keywords" content="Widding">
-    <meta name="description" content="Widding">
+    <meta name="keywords" content="Wedding">
+    <meta name="description" content="Wedding">
     <meta name="viewport" content="width=device-width">
     <title>Lena</title>
 
